Final change or i die

--- a/_tabs/projects.html
+++ b/_tabs/projects.html
@@ -108,7 +108,7 @@ permalink: /projects/
       <div class="card-head">
         <img
           class="thumb"
-          src="/assets/img/scrabblesolver.jpg"
+          src="{{ '/assets/img/scrabblesolver.jpg' | relative_url }}"
           alt="Engineering icon"
         />
         <div class="title">
